# autocommit

./: .autocommit-ignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  autocommit  pyproject.toml
autocommit.egg-info/: PKG-INFO  requires.txt  top_level.txt
