[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autocommit"
version = "1.2.5"
description = "Git Auto Committer using Ollama models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "greedy", email = "greedy@example.com"}
]
keywords = ["git", "commit", "ollama", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.6"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.scripts]
autocommit = "autocommit:main"

[project.urls]
Homepage = "https://github.com/greedy/autocommit"
Repository = "https://github.com/greedy/autocommit"
Issues = "https://github.com/greedy/autocommit/issues"

[tool.setuptools]
packages = ["autocommit"]

[tool.setuptools.package-data]
autocommit = ["*.png"]